# youtube-api-proxy-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
src/: handler.rs  handlers.rs  kv_store.rs  logger.rs  main.rs  yt_client.rs
src/middleware/: helmet.rs  logger.rs  mod.rs
