[package]
name = "youtube-api-proxy-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
