[package]
name = "youtube-api-proxy-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono", "unlock_notify"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
function_timer = { git = "https://github.com/TegarAditya/function_timer/", rev = "55b2ae544bbd84c65ee53da6988f2140ba45dba7"}
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["set-header"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
