[package]
name = "youtube-api-proxy-rust"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "unlock_notify"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
function_timer = { git = "https://github.com/TegarAditya/function_timer/", rev = "55b2ae544bbd84c65ee53da6988f2140ba45dba7"}
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["set-header"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
